Przywrócenie nazwy Visual 101 i poprawa stylów

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Strona testowa</title>
+  <title>Visual 101</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Strona testowa</h1>
+  <h1>Visual 101</h1>
   <div id="visualization"></div>
   <script src="script.js"></script>
 </body>
