Zmiana na aplikację z kamerą

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Visual 101</title>
+  <title>Visual 101 - Kamera</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Visual 101</h1>
-  <div id="visualization"></div>
+  <h1>Visual 101 - Zabawa z Kamerą</h1>
+  <div id="camera-container">
+    <video id="camera" autoplay playsinline></video>
+    <div id="start-container">
+      <button id="start-camera">Włącz Kamerę</button>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
