--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Visual 101 - Kamera z Filtrami</title>
+  <title>Visual 101 - Kamera z AI</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="https://cdn.jsdelivr.net/npm/face-api.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/face_mesh.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <h1>Visual 101 - Zabawa z Kamerą</h1>
   <div id="camera-container">
     <video id="camera" autoplay playsinline></video>
-    <canvas id="overlay"></canvas>
+    <canvas id="output"></canvas>
     <div id="start-container">
       <button id="start-camera">Włącz Kamerę</button>
     </div>
   </div>
   <div id="filters-container">
     <button class="filter-btn" data-filter="none">Normalny</button>
-    <button class="filter-btn" data-filter="dog">Piesek</button>
-    <button class="filter-btn" data-filter="cat">Kotek</button>
-    <button class="filter-btn" data-filter="rainbow">Tęcza</button>
+    <button class="filter-btn" data-filter="mask">Maska</button>
+    <button class="filter-btn" data-filter="glasses">Okulary</button>
+    <button class="filter-btn" data-filter="hat">Kapelusz</button>
   </div>
   <script src="script.js"></script>
 </body>
