--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Visual 101 - Zabawa z Kamerą</title>
   <link rel="stylesheet" href="styles.css">
+  <script defer src="https://cdn.jsdelivr.net/npm/face-api.js"></script>
 </head>
 <body>
   <h1>Visual 101 - Zabawa z Kamerą</h1>
