--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Visual 101 - Zabawa z Kamerą</title>
   <link rel="stylesheet" href="styles.css">
-  <script defer src="https://cdn.jsdelivr.net/npm/face-api.js"></script>
+  <script defer src="https://unpkg.com/face-api.js@0.22.2/dist/face-api.min.js"></script>
 </head>
 <body>
   <h1>Visual 101 - Zabawa z Kamerą</h1>
